--- a/src/home.css
+++ b/src/home.css
@@ -1,5 +1,13 @@
 main {
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+
+.hero-section {
+  display: flex;
   gap: 70px;
   width: 60%;
   margin: 50px 0px;
@@ -18,10 +26,11 @@ main {
   display: flex;
   flex-direction: column;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.3);
-  padding: 20px;
+  padding: 25px;
   border-radius: 10px;
   place-self: center;
   gap: 20px;
+  position: relative;
 }
 
 .AI-label {
@@ -134,6 +143,10 @@ main {
   width: 100%;
   height: 50px;
   border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  padding: 10px;
 }
 
 .bar-cont-active {
@@ -141,7 +154,8 @@ main {
   border: 1px solid #c6d2ff;
 }
 
-.bar-1, .bar-2 {
+.bar-1,
+.bar-2 {
   width: 70%;
   height: 14px;
   background-color: #e6e6e6af;
@@ -155,3 +169,61 @@ main {
 .bar-2 {
   width: 100%;
 }
+
+.top-abs,
+.lower-abs {
+  position: absolute;
+  border-radius: 10px;
+  padding: 10px;
+}
+
+.top-abs {
+  top: -20px;
+  right: -20px;
+  background-color: #00bba7;
+  color: white;
+}
+
+.lower-abs {
+  bottom: -20px;
+  left: -20px;
+  background-color: #4f39f6;
+  color: white;
+}
+
+.home-page-section-divider {
+  height: 1px;
+  width: 50%;
+  background-color: lightgray;
+  margin: 100px 0px;
+}
+
+article {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+article h2 {
+  font-size: 2.2rem;
+}
+
+article p {
+  font-size: 1.2rem;
+  color: #858484;
+}
+
+.article-classification {
+  display: flex;
+  gap: 20px;
+}
+
+.article-classification > div {
+  width: 200px;
+  height: 200px;
+  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.7);
+  background-color: #00786f;
+}
+
+ 
