--- a/style.css
+++ b/style.css
@@ -20,6 +20,21 @@ header {
 .project-title {
   font-size: 1.35rem;
   font-weight: 500;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.project-title > div {
+  background-color: #4f39f6;
+  color: white;
+  padding: 10px;
+  border-radius: 10px;
+}
+
+.project-title svg {
+  width: 25px;
+  margin: 0px;
 }
 
 nav {
@@ -40,10 +55,11 @@ h1, h2, h3, h4, h5, h6, p {
 }
 
 #home {
-  display: flex;
+  display: none;
   justify-content: center;
   align-items: center;
 }
+
 
 #home,
 #generate,
